--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -21,13 +22,16 @@
     "mime-types": "^2.1.29",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.6.5",
     "promise-mysql": "^3.3.1",
-    "mysql": "^2.18.1"
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
+    "@types/nodemailer": "^6.4.4",
     "nodemon": "^2.0.4"
   }
 }
